--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "styled-components": "^6.1.15",
+    "swiper": "^11.2.4",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
